# Anime-Recommender

./: .gitignore  Dockerfile  llmops-k8s.yaml  pyproject.toml  requirements.txt  setup.py
config/: config.py
data/: anime_with_synopsis.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
src/app/: app.py
src/pipeline/: pipeline.py
